feat: insert new data
