# src/routes/producaoRoute.js
@@ -1,11 +1,8 @@
 const producao = require('../controllers/producaoController');
 
-
 module.exports = (app) => {
-  app.post('/teste/', producao.teste
-    /*#swagger.tags = ['aluno']
-    #swagger.summary = 'Cadastro de alunos'
-    #swagger.description = 'Teste de descricao'
-    */
-  )
+  app.post('/cadastrar-ordem-producao/', producao.cadastrarOrdem)
+  app.get('/get-ordem-producao/', producao.getOrdemProducao)
+  app.patch('/update-ordem-producao/', producao.updateOrdemProducao)
+  app.delete('/delete-ordem-producao/:id', producao.deleteOrdemProducao)
 }
